@@ -78,6 +78,7 @@
 		</dependency>
 		
 		<!-- Apache Maven Environment -->
+		<!-- https://maven.apache.org/plugins/maven-dependency-plugin/dependency-info.html -->
 		<dependency>
   			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-dependency-plugin</artifactId>
@@ -114,12 +115,40 @@
 			</plugin>
 			
 			<!-- Soluçao erro Failed to execute goal org.apache.maven.plugins:maven-resources-plugin:3.2.0:resources -->
-			<plugin>
-            	<groupId>com.heroku.sdk</groupId>
-            	<artifactId>heroku-maven-plugin</artifactId>
-            	<version>2.0.8</version>
-            </plugin>
-            <!-- https://cursos.alura.com.br/forum/topico-maven-erro-para-deploy-no-heroku-90726 -->
+			
+		<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <release>12</release>
+                <compilerArgs>--enable-preview</compilerArgs>
+            </configuration>
+        </plugin>
+        
+        <!-- This is just to make sure the class is set as main class to execute from the jar-->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                        <transformers>
+                            <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                            <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <mainClass>com.stackoverflow.nullpointer.expression.SwitchExpressions</mainClass>
+                            </transformer>
+                        </transformers>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>	
+         <!-- https://cursos.alura.com.br/forum/topico-maven-erro-para-deploy-no-heroku-90726 -->
 		</plugins>
 	</build>
 
